تعديل الصفحة الرئيسية

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
 
 	<title>ياسين</title>
 	
-	<meta name="description" content="أهلا بك في الصفحه الرئيسية الخاصه بقالب زاهي
-زاهي هو قالب مدونات مجاني مصمم ليكون بسيط وسريع وسهل التعديل
-يمكنك استخدامه للكتابه عن اي شيء تريده
+	<meta name="description" content="مرحبا بك في صفحتي الشخصية 
+أنا ياسين 
 ">
 	<link rel="canonical"
 		href="http://localhost:1313/">
@@ -68,8 +67,8 @@
 
 
 <div class="flex flex-col gap-3 items-start justify-center h-full mt-20 md:mt-36 ">
-    <h1 class="text-2xl md:text-5xl font-black py-2"> زاهي </h1>
-    أهلا بك في الصفحه الرئيسية الخاصه بقالب زاهي<br />زاهي هو قالب مدونات مجاني مصمم ليكون بسيط وسريع وسهل التعديل<br />يمكنك استخدامه للكتابه عن اي شيء تريده<br />
+    <h1 class="text-2xl md:text-5xl font-black py-2"> ياسين </h1>
+    مرحبا بك في صفحتي الشخصية <br />أنا ياسين <br />
     
     <div class="flex items-center gap-3 my-4">
     
